--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "@types/react": "^16.0.34",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.0"
+    "react-scripts": "1.1.0",
+    "react-spinners": "^0.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
