--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
-    "react-spinners": "^0.2.5"
+    "react-spinners": "^0.2.5",
+    "sockjs": "^0.3.19",
+    "stompjs": "^2.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
